Add percentage counting method, that provides the percentage of each category of expenses and earnings. Add new page, optimize earnings/expenses pages. Improve the pages for adding earnings and expenses

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -22,11 +22,16 @@
                 Route="DashboardPage" />
             </Tab>
             <Tab Title="Finance" Icon="finance.png">
-                <ShellContent
-                Title="Finance"
+            <ShellContent
+                Title="Income"
+                ContentTemplate="{DataTemplate local:FinancePage2}"
+                Route="FinancePage2" />
+            <ShellContent
+                Title="Expenses"
                 ContentTemplate="{DataTemplate local:FinancePage}"
                 Route="FinancePage" />
-            </Tab>
+                
+        </Tab>
             <Tab Title="Add" Icon="plus.png">
             <ShellContent
                 
