--- a/Views/ElementPages/AddReminderPage.xaml
+++ b/Views/ElementPages/AddReminderPage.xaml
@@ -4,10 +4,16 @@
              x:Class="PersonalManager.Views.ElementPages.AddReminderPage"
              Title="AddReminderPage"
              BackgroundColor="Black"
-             Padding="30">
+             Padding="25">
+    <ContentPage.Resources>
+        <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#0062F0" Offset="0"/>
+            <GradientStop Color="Purple" Offset="1"/>
+        </LinearGradientBrush>
+    </ContentPage.Resources>
     <VerticalStackLayout Spacing="20">
         <Label Text="Add Note" FontSize="40" HorizontalOptions="Center" TextColor="#0062F0"/>
-        <Border Stroke="purple" StrokeShape="RoundRectangle 25" StrokeThickness="3" Padding="30" BackgroundColor="Black" MinimumHeightRequest="450">
+        <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" StrokeThickness="3" Padding="30" BackgroundColor="Black" MinimumHeightRequest="450">
             <Grid RowSpacing="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -19,21 +25,21 @@
                 </Grid.ColumnDefinitions>
                 <Border BackgroundColor="Transparent" StrokeShape="RoundRectangle 60" MinimumWidthRequest="225" HeightRequest="60"
                             Stroke="DimGray" >
-                    <Entry BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title"
+                    <Entry x:Name="TitleEntry" BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title" TextChanged="TitleEntry_TextChanged"
                                PlaceholderColor="DimGray" TextColor="White" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
                 </Border>
                 <Border Grid.Row="1" BackgroundColor="Transparent" Padding="15" StrokeThickness="1" StrokeShape="RoundRectangle 20" Stroke="dimgray">
-                    <Editor FontSize="Small" Placeholder="Provide some details" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
+                    <Editor x:Name="DetailsEditor" FontSize="Small" Placeholder="Provide some details" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
                 </Border>
                 <VerticalStackLayout Grid.Row="2">
                     <Label Text="Set time" VerticalOptions="Center" HorizontalOptions="Center" FontSize="20" TextColor="Grey"/>
                     <HorizontalStackLayout Grid.Row="2" HorizontalOptions="Center" Spacing="10">
-                        <DatePicker FontSize="20" TextColor="Grey" Date="1/1/2023" VerticalOptions="Center"></DatePicker>
-                        <TimePicker FontSize="20" TextColor="Grey" Time="00:00" VerticalOptions="Center"></TimePicker>
+                        <DatePicker x:Name="DatePicker" FontSize="20" TextColor="Grey" Date="1/1/2023" VerticalOptions="Center"></DatePicker>
+                        <TimePicker x:Name="TimePicker" FontSize="20" TextColor="Grey" Time="00:00" VerticalOptions="Center"></TimePicker>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </Grid>
         </Border>
-        <Button BackgroundColor="purple" Text="Add" CornerRadius="20" FontSize="Medium"/>
+        <Button x:Name="AddButton" BackgroundColor="#4B005E" Text="Add" CornerRadius="20" FontSize="Medium" Clicked="AddButton_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
