--- a/Views/ElementPages/RemindersPage.xaml
+++ b/Views/ElementPages/RemindersPage.xaml
@@ -4,7 +4,8 @@
              x:Class="PersonalManager.Views.ElementPages.RemindersPage"
              Title="RemindersPage"
              Padding="10"
-             BackgroundColor="Black">
+             BackgroundColor="Black"
+             Appearing="ContentPage_Appearing">
     <ContentPage.Resources>
         <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
             <GradientStop Color="Purple" Offset="0"/>
