--- a/Views/CalendarPage.xaml
+++ b/Views/CalendarPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.CalendarPage"
-             Title="CalendarPage">
+             Title="CalendarPage"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
