--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -5,7 +5,7 @@
              Title="Dashboard"
              BackgroundColor="Black"
              Padding="10"
-             
+             NavigationPage.HasNavigationBar="False"
              >
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
