--- a/Views/ElementPages/AddEarningPage.xaml
+++ b/Views/ElementPages/AddEarningPage.xaml
@@ -46,21 +46,23 @@
                             StrokeShape="RoundRectangle 60" MinimumWidthRequest="225">
                         <Picker x:Name="CategoryPicker" HorizontalTextAlignment="Center" VerticalOptions="Center"
                          TextColor="White" FontSize="20">
+                            <!--Work, Gifts, Investments, RentalIncome, PersonalLoans, Other-->
                             <Picker.Items>
-                                <x:String>FAST</x:String>
-                                <x:String>FAAD</x:String>
-                                <x:String>FAHAS</x:String>
-                                <x:String>FAHCS</x:String>
-                                <x:String>PSB</x:String>
+                                <x:String>Work</x:String>
+                                <x:String>Investments</x:String>
+                                <x:String>Gifts</x:String>
+                                <x:String>Rental Income</x:String>
+                                <x:String>Personal Loans</x:String>
+                                <x:String>Other</x:String>
                             </Picker.Items>
                         </Picker>
                     </Border>
                 </VerticalStackLayout>
                 <Border Grid.Row="2" BackgroundColor="Transparent" Padding="15" StrokeThickness="1" StrokeShape="RoundRectangle 20" Stroke="dimgray">
-                    <Editor FontSize="Small" Placeholder="Provide some details" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
+                    <Editor x:Name="DetailsEditor" FontSize="Small" Placeholder="Provide some details" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
                 </Border>
             </Grid>
         </Border>
-        <Button BackgroundColor="DarkGreen" Text="Add" CornerRadius="20" FontSize="Medium"/>
+        <Button x:Name="AddButton" BackgroundColor="DarkGreen" Text="Add" CornerRadius="20" FontSize="Medium" Clicked="AddButton_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
