--- a/Views/ElementPages/AddNotePage.xaml
+++ b/Views/ElementPages/AddNotePage.xaml
@@ -4,10 +4,16 @@
              x:Class="PersonalManager.Views.ElementPages.AddNotePage"
              Title="AddNotePage"
              BackgroundColor="Black"
-             Padding="30">
+             Padding="25">
+    <ContentPage.Resources>
+        <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#0062F0" Offset="0"/>
+            <GradientStop Color="Orange" Offset="1"/>
+        </LinearGradientBrush>
+    </ContentPage.Resources>
     <VerticalStackLayout Spacing="20">
         <Label Text="Add Note" FontSize="40" HorizontalOptions="Center" TextColor="#0062F0"/>
-        <Border Stroke="orange" StrokeShape="RoundRectangle 25" StrokeThickness="3" Padding="30" BackgroundColor="Black" MinimumHeightRequest="450">
+        <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" StrokeThickness="3" Padding="30" BackgroundColor="Black" MinimumHeightRequest="450">
             <Grid RowSpacing="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -18,14 +24,14 @@
                 </Grid.ColumnDefinitions>
                 <Border BackgroundColor="Transparent" StrokeShape="RoundRectangle 60" MinimumWidthRequest="225" HeightRequest="65"
                             Stroke="DimGray" >
-                    <Entry BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title"
+                    <Entry x:Name="TitleEntry" BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title"
                                PlaceholderColor="DimGray" TextColor="White" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
                 </Border>
                 <Border Grid.Row="1" BackgroundColor="Transparent" Padding="15" StrokeThickness="1" StrokeShape="RoundRectangle 20" Stroke="dimgray">
-                    <Editor FontSize="Small" Placeholder="Add text" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
+                    <Editor x:Name="DetailsEditor" FontSize="Small" Placeholder="Add text" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
                 </Border>
             </Grid>
         </Border>
-        <Button BackgroundColor="orange" Text="Add" CornerRadius="20" FontSize="Medium"/>
+        <Button x:Name="AddButton" BackgroundColor="orange" Text="Add" CornerRadius="20" FontSize="Medium" Clicked="AddButton_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
