--- a/Views/ProfilePage.xaml
+++ b/Views/ProfilePage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.ProfilePage"
-             Title="ProfilePage">
+             Title="ProfilePage"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout>
         <ListView x:Name="functionsListView"/>
     </VerticalStackLayout>
