--- a/Views/ElementPages/EarningsPage.xaml
+++ b/Views/ElementPages/EarningsPage.xaml
@@ -4,7 +4,9 @@
              x:Class="PersonalManager.Views.ElementPages.EarningsPage"
              Title="Earnings"
              Padding="10"
-             BackgroundColor="black">
+             BackgroundColor="black"
+             Appearing="ContentPage_Appearing"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Resources>
         <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
             <GradientStop Color="Green" Offset="0"/>
@@ -20,7 +22,7 @@
             HorizontalOptions="Center" />
         <!--<Border Stroke="#0062F0" StrokeThickness="3" Padding="15" BackgroundColor="Transparent">-->
         <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
-        <ListView x:Name="EarningsListView" RowHeight="100"> 
+        <ListView x:Name="EarningsListView" RowHeight="100" ItemTapped="EarningsListView_ItemTapped"> 
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <!--<TextCell Text="{Binding Title}"
