--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -6,6 +6,7 @@
              BackgroundColor="Black"
              Padding="10"
              NavigationPage.HasNavigationBar="False"
+             Appearing="ContentPage_Appearing"
              >
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
@@ -37,11 +38,11 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Text="+28031.2" FontSize="27"  TextColor="Green" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
-                    <Label Text="-2801.2" FontSize="27" TextColor="Red" HorizontalOptions="Center" VerticalOptions="Center" 
+                <Label x:Name="LastEarningLabel" FontSize="27"  HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                    <Label x:Name="LastExpenseLabel" FontSize="27"  HorizontalOptions="Center" VerticalOptions="Center" 
                            FontAttributes="Bold" Grid.Column="1"/>
                 <Line Grid.Row="1" BackgroundColor="DimGrey" Grid.ColumnSpan="2" VerticalOptions="Start" HeightRequest="1"/>
-                <Label Text="+280" FontSize="27"  TextColor="Green" Grid.Row="1" Grid.ColumnSpan="2"
+                <Label x:Name="BalanceLabel" FontSize="27"  TextColor="Green" Grid.Row="1" Grid.ColumnSpan="2"
                        HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
                     <Button x:Name="EarningsButton" BackgroundColor="Transparent" CornerRadius="30" Clicked="EarningsButton_Clicked"></Button>
                     <Button x:Name="ExpensesButton" BackgroundColor="Transparent" CornerRadius="30" Grid.Column="1" Clicked="ExpensesButton_Clicked"></Button>
@@ -49,7 +50,7 @@
         </Border>
         </VerticalStackLayout>
 
-        <VerticalStackLayout Grid.Column="1" Grid.Row="1" Spacing="10" IsVisible="false">
+        <VerticalStackLayout x:Name="YesReminders" Grid.Column="1" Grid.Row="1" Spacing="10" IsVisible="true">
             <Label Text="Reminder" HorizontalTextAlignment="Center" TextColor="#0062F0" FontSize="30"/>
             <Border Stroke="#0062F0" HeightRequest="130" StrokeShape="RoundRectangle 35" StrokeThickness="3" Padding="15" BackgroundColor="Black">
                 <Grid ColumnSpacing="10">
@@ -63,18 +64,19 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Text="+28sWAACJKCC" FontSize="25"  TextColor="Grey" HorizontalOptions="Center" Grid.RowSpan="2"
+                    <Label x:Name="ReminderTitleLabel" Text="+28sWAACJKCCwrerebwave" FontSize="20"  TextColor="MediumPurple" HorizontalOptions="Center" Grid.RowSpan="2"
                            VerticalOptions="Center" FontAttributes="Bold"/>
-                    <Label Text="28" FontSize="25" TextColor="DarkGreen" HorizontalOptions="Center" VerticalOptions="Center" Grid.Column="1"/>
-                    <Line Grid.Row="1" BackgroundColor="DimGrey"  VerticalOptions="Start" HeightRequest="1" Grid.Column="1"/>
+                    <Label x:Name="DateLabel" Text="28 APR" FontSize="16" TextColor="Gray" FontAttributes="Bold"
+                           HorizontalOptions="Center" VerticalOptions="Center" Grid.Column="1"/>
+                    <Line Grid.Row="1" BackgroundColor="DimGrey"  VerticalOptions="Start" HeightRequest="1" Grid.Column="1" />
                     <Line BackgroundColor="DimGrey"  VerticalOptions="Start" WidthRequest="1" Grid.Column="1" 
-                          HorizontalOptions="Start" Grid.RowSpan="2"/>
-                    <Label Text="MAR" FontSize="25"  TextColor="DarkGreen" Grid.Row="1" Grid.Column="1"
-                       HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                          HorizontalOptions="Start" Grid.RowSpan="2" />
+                    <Label x:Name="TimeLabel" Text="18:00" FontSize="16"  TextColor="Gray" Grid.Row="1" Grid.Column="1" FontAttributes="Bold"
+                       HorizontalOptions="Center" VerticalOptions="Center"/>
                 </Grid>
             </Border>
         </VerticalStackLayout>
-        <VerticalStackLayout Grid.Column="1" Grid.Row="1" Spacing="10">
+        <VerticalStackLayout x:Name="NoReminders" Grid.Column="1" Grid.Row="1" Spacing="10" IsVisible="false">
             <Label Text="Reminder" HorizontalTextAlignment="Center" TextColor="#0062F0" FontSize="30"/>
             <Border Stroke="#0062F0" HeightRequest="130" StrokeShape="RoundRectangle 35" StrokeThickness="3" Padding="15" BackgroundColor="Black">
                 <Label Text="No reminders yet" FontSize="25" TextColor="DimGray" HorizontalOptions="Center"
@@ -85,13 +87,13 @@
                 BackgroundColor="Transparent" HeightRequest="50" WidthRequest="90" Clicked="RemindersButton_Clicked"
                 VerticalOptions="Start" HorizontalOptions="End"/>
 
-        <VerticalStackLayout Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="false">
+        <VerticalStackLayout x:Name="YesNotes" Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="false">
             <Label Text="Note" HorizontalTextAlignment="Center" TextColor="#0062F0" FontSize="30"/>
             <Border Stroke="#0062F0" HeightRequest="130" StrokeShape="RoundRectangle 35" StrokeThickness="3" Padding="20" BackgroundColor="Black">
                 <Grid ColumnSpacing="10">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1.3*"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="1.2*"/>
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
@@ -99,14 +101,14 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Text="Note" FontSize="25" TextColor="DarkGoldenrod" HorizontalOptions="Start"
+                    <Label x:Name="NoteTitleLabel" FontSize="15" TextColor="DarkGoldenrod" HorizontalOptions="Start"
                            VerticalOptions="Center" FontAttributes="Bold"/>
                     <Line Grid.Row="0" BackgroundColor="Yellow"  VerticalOptions="End" HeightRequest="0.1" Grid.ColumnSpan="2"/>
-                    <Label Text="Content" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Start" TextColor="NavajoWhite"/>
+                    <Label x:Name="NoteTextLabel" Text="Content" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Start" TextColor="Grey"/>
                 </Grid>
             </Border>
         </VerticalStackLayout>
-        <VerticalStackLayout Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="true">
+        <VerticalStackLayout x:Name="NoNotes" Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="true">
             <Label Text="Note" HorizontalTextAlignment="Center" TextColor="#0062F0" FontSize="30"/>
             <Border Stroke="#0062F0" HeightRequest="130" StrokeShape="RoundRectangle 35" StrokeThickness="3" Padding="15" BackgroundColor="Black">
                 <Label Text="No notes yet" FontSize="25" TextColor="DimGray" HorizontalOptions="Center"
