--- a/Views/ElementPages/NotesPage.xaml
+++ b/Views/ElementPages/NotesPage.xaml
@@ -5,6 +5,7 @@
              Title="NotesPage"
              Padding="10"
              BackgroundColor="black"
+             NavigationPage.HasNavigationBar="False"
              Appearing="ContentPage_Appearing">
     <ContentPage.Resources>
         <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
@@ -20,7 +21,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
             <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
-                <ListView x:Name="NotesListView" RowHeight="150">
+                <ListView x:Name="NotesListView" RowHeight="150" ItemTapped="NotesListView_ItemTapped">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
