--- a/Views/StarterPage.xaml
+++ b/Views/StarterPage.xaml
@@ -12,14 +12,14 @@
             <GradientStop Color="#0D1F2D" Offset="0.68"/>
             <GradientStop Color="#0D1F2D" Offset="0.95"/>
             <GradientStop Color="#0D1F2D" Offset="1"/>
-            
+
         </LinearGradientBrush>
     </ContentPage.Resources>
 
             <Grid Background="{StaticResource PageBackground}">
 
                 <AbsoluteLayout>
-       
+
                         <Image Source="background.jpeg"
                                Aspect="AspectFill"
                                AbsoluteLayout.LayoutBounds="0, 0, 1.5, 2"
@@ -32,10 +32,10 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-            
+
                 </Grid.RowDefinitions>
-        
-                <StackLayout Grid.Row="1" VerticalOptions="Center" 
+
+                <StackLayout Grid.Row="1" VerticalOptions="Center"
                      HeightRequest="5"
                      Margin="0,0,10,0"
                      HorizontalOptions="Start"
@@ -67,7 +67,7 @@
                        Margin="0,5,0,0"
                        PlaceholderColor="#A4D4FF"
                        TextColor="#A4D4FF"/>
-                
+
            </Frame>
 
             <Frame BorderColor="#75B8FF"
@@ -79,7 +79,7 @@
                   BackgroundColor="#0D1F2D"
                   HeightRequest="40">
 
-                
+
                 <Entry Placeholder="Enter Email"
                        PlaceholderColor="#A4D4FF"
                        FontSize="Small"
@@ -87,7 +87,7 @@
                        TextColor="#A4D4FF"/>
              </Frame>
 
-            
+
             <Frame BorderColor="#75B8FF"
                   CornerRadius="9"
                   HasShadow="True"
@@ -98,12 +98,13 @@
                   HeightRequest="40">
 
                 <Entry Placeholder=" Enter Phone Number(optional)"
+                       x:Name="PhoneEntry"
                        FontSize="Small"
                        Margin="0,5,0,0"
                        PlaceholderColor="#A4D4FF"
                        TextColor="#A4D4FF"/>
                 </Frame>
-            
+
             <Frame BorderColor="#75B8FF"
                   CornerRadius="9"
                   HasShadow="True"
@@ -120,7 +121,7 @@
                        TextColor="#A4D4FF"/>
             </Frame>
 
-            
+
             <Frame BorderColor="#75B8FF"
                   CornerRadius="9"
                   HasShadow="True"
@@ -137,7 +138,7 @@
                        TextColor="#A4D4FF"/>
             </Frame>
 
-            
+
             <Frame BorderColor="#75B8FF"
                   CornerRadius="9"
                   HasShadow="True"
@@ -148,12 +149,13 @@
                   HeightRequest="40">
 
                 <Entry Placeholder="Choose a Username" FontSize="Small"
+                       x:Name="UsernameEntry"
                        TextColor="#A4D4FF"
                        Margin="0,5,0,0"
                        PlaceholderColor="#A4D4FF"/>
             </Frame>
 
-            
+
             <Frame BorderColor="#75B8FF"
                   CornerRadius="9"
                   HasShadow="True"
@@ -164,13 +166,14 @@
                   HeightRequest="40">
 
                 <Entry Placeholder="Password" FontSize="Small"
+                       x:Name="PasswordEntry"
                        IsPassword="True"
                        TextColor="#A4D4FF"
                        PlaceholderColor="#A4D4FF"
                        Margin="0,5,0,0"/>
             </Frame>
             </StackLayout>
-   
+
                <StackLayout Grid.Row="4"
                             VerticalOptions="End"
                             Padding="10"
